[UNI-255] fix: json 지원